{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 67,
  "lineage": "e2940664-7e77-0065-7b80-577f34595673",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:internet-gateway/igw-0e6bb1372327dd196",
            "id": "igw-0e6bb1372327dd196",
            "owner_id": "867125385227",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:route-table/rtb-05622018a9bec0143",
            "id": "rtb-05622018a9bec0143",
            "owner_id": "867125385227",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6bb1372327dd196",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0135efd3f144b946f",
            "route_table_id": "rtb-05622018a9bec0143",
            "subnet_id": "subnet-0b4f3909d7e19e79b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2359f89a5fb1509",
            "route_table_id": "rtb-05622018a9bec0143",
            "subnet_id": "subnet-0e40f502d16c21612"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c310813776e520e0",
            "route_table_id": "rtb-05622018a9bec0143",
            "subnet_id": "subnet-0168dff0cea4172b5"
          },
          "dependencies": [
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.new-igw"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b1ffbde224ef32",
            "route_table_id": "rtb-05622018a9bec0143",
            "subnet_id": "subnet-0bd2a06b309131702"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023db89697e51a892",
            "route_table_id": "rtb-05622018a9bec0143",
            "subnet_id": "subnet-0c94dc1bd283c2076"
          },
          "dependencies": [
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.new-igw"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c71b31891de4dd6",
            "route_table_id": "rtb-05622018a9bec0143",
            "subnet_id": "subnet-0f3f8c680a4b103db"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:security-group/sg-063dbc190d9c3d461",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063dbc190d9c3d461",
            "ingress": [],
            "name": "terraform-20211102153526198200000001",
            "name_prefix": "terraform-",
            "owner_id": "867125385227",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:subnet/subnet-0b4f3909d7e19e79b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b4f3909d7e19e79b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "867125385227",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:subnet/subnet-0e40f502d16c21612",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e40f502d16c21612",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "867125385227",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:subnet/subnet-0168dff0cea4172b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0168dff0cea4172b5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "867125385227",
            "tags": {
              "Name": "fullcycle-subnet-2"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-2"
            },
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:subnet/subnet-0bd2a06b309131702",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0bd2a06b309131702",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "867125385227",
            "tags": {
              "Name": "fullcycle-subnet-3"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-3"
            },
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:subnet/subnet-0c94dc1bd283c2076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0c94dc1bd283c2076",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "867125385227",
            "tags": {
              "Name": "fullcycle-subnet-4"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-4"
            },
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:subnet/subnet-0f3f8c680a4b103db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0f3f8c680a4b103db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "867125385227",
            "tags": {
              "Name": "fullcycle-subnet-5"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-5"
            },
            "vpc_id": "vpc-0091b05657d51698b"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867125385227:vpc/vpc-0091b05657d51698b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0707e55edb5781f",
            "default_route_table_id": "rtb-072b8095777de16ca",
            "default_security_group_id": "sg-047ef2dd7fddfa635",
            "dhcp_options_id": "dopt-aae44bd0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0091b05657d51698b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-072b8095777de16ca",
            "owner_id": "867125385227",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}